--- a/utilities/setup/Dockerfile.util
+++ b/utilities/setup/Dockerfile.util
@@ -24,4 +24,9 @@ FROM ${BASE_IMAGE} AS base
 ARG SCRIPT
 COPY ${SCRIPT} ${SCRIPT}
 RUN chmod +x ${SCRIPT}
-RUN ${SCRIPT}
+
+# Use BuildKit cache mounts for apt and pip - persists across builds
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt/lists,sharing=locked \
+    --mount=type=cache,target=/root/.cache/pip,sharing=locked \
+    ${SCRIPT}
