--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -726,13 +726,13 @@
             "name": "(gdb) gamma_correction_op test",
             "type": "cppdbg",
             "request": "launch",
-            "preLaunchTask": "Build slang_simple",
-            "program": "${workspaceFolder}/build/slang_simple/operators/gamma_correction/test/gamma_correction_test",
+            "preLaunchTask": "Build slang_gamma_correction (C++)",
+            "program": "${workspaceFolder}/build/slang_gamma_correction/operators/gamma_correction/test/gamma_correction_test",
             "args": [
                 "--gtest_filter=*"
             ],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/build/slang_simple/operators/gamma_correction/test/",
+            "cwd": "${workspaceFolder}/build/slang_gamma_correction/operators/gamma_correction/test/",
             "externalConsole": false,
             "MIMode": "gdb",
             "setupCommands": [
@@ -1306,7 +1306,7 @@
             "name": "(gdb) slang_simple/cpp",
             "type": "cppdbg",
             "request": "launch",
-            "preLaunchTask": "Build slang_simple",
+            "preLaunchTask": "Build slang_simple (C++)",
             "program": "${workspaceFolder}/build/slang_simple/applications/slang/slang_simple/cpp/slang_simple",
             "args": [
             ],
@@ -1329,7 +1329,7 @@
             "name": "(debugpy) slang_simple/python",
             "type": "debugpy",
             "request": "launch",
-            "preLaunchTask": "Build slang_simple",
+            "preLaunchTask": "Build slang_simple (Python)",
             "program": "${workspaceFolder}/applications/slang/slang_simple/python/slang_simple.py",
             "cwd": "${workspaceFolder}/build/slang_simple/",
             "env": {
@@ -1345,7 +1345,7 @@
             "name": "(gdb) slang_gamma_correction/cpp",
             "type": "cppdbg",
             "request": "launch",
-            "preLaunchTask": "Build slang_gamma_correction",
+            "preLaunchTask": "Build slang_gamma_correction (C++)",
             "program": "${workspaceFolder}/build/slang_gamma_correction/applications/slang/slang_gamma_correction/cpp/slang_gamma_correction",
             "args": [
             ],
@@ -1368,7 +1368,7 @@
             "name": "(debugpy) slang_gamma_correction/python",
             "type": "debugpy",
             "request": "launch",
-            "preLaunchTask": "Build slang_gamma_correction",
+            "preLaunchTask": "Build slang_gamma_correction (Python)",
             "program": "${workspaceFolder}/applications/slang/slang_gamma_correction/python/slang_gamma_correction.py",
             "cwd": "${workspaceFolder}/build/slang_gamma_correction/",
             "env": {
@@ -1384,7 +1384,7 @@
             "name": "(gdb) slang_shader_op test",
             "type": "cppdbg",
             "request": "launch",
-            "preLaunchTask": "Build slang_simple",
+            "preLaunchTask": "Build slang_simple (C++)",
             "program": "${workspaceFolder}/build/slang_simple/operators/slang_shader/cpp/test/slang_shader_test",
             "args": [
                 "--gtest_filter=*"
@@ -1408,7 +1408,7 @@
             "name": "(gdb) slang_gamma_correction test",
             "type": "cppdbg",
             "request": "launch",
-            "preLaunchTask": "Build slang_gamma_correction",
+            "preLaunchTask": "Build slang_gamma_correction (C++)",
             "program": "${workspaceFolder}/build/slang_gamma_correction/operators/gamma_correction/test/gamma_correction_test",
             "args": [
                 "--gtest_filter=*"
