Added EtherCAT logo to Readme.  Also, CMake fail will not block global build.

--- a/applications/holocat/CMakeLists.txt
+++ b/applications/holocat/CMakeLists.txt
@@ -31,5 +31,5 @@ if(EcMaster_FOUND)
     message(STATUS "Building HoloCat tests")
     add_subdirectory(tests)
 else()
-    message(FATAL_ERROR "EC-Master SDK not found")
+    message(STATUS "EC-Master SDK not found. Skipping HoloCat application build.")
 endif()
