--- a/operators/advanced_network/advanced_network/managers/dpdk/CMakeLists.txt
+++ b/operators/advanced_network/advanced_network/managers/dpdk/CMakeLists.txt
@@ -18,7 +18,7 @@ message(STATUS "PROJECT_NAME: ${PROJECT_NAME}")
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_sources(${PROJECT_NAME} PRIVATE adv_network_dpdk_mgr.cpp adv_network_dpdk_stats.cpp adv_network_dpdk_log.cpp)
+target_sources(${PROJECT_NAME} PRIVATE adv_network_dpdk_mgr.cpp adv_network_dpdk_stats.cpp)
 
 # Try to find DPDK via pkg-config
 # This will find upstream DPDK (installed to /usr/local) or mlnx-dpdk
