cleanup: fix PUBLIC/PRIVATE link deps and remove unused CUDA from managers
- DPDK manager: remove unused CUDA link deps, #include <cuda.h>, and
  CUDA target properties (no .cu files)
- RDMA manager: DPDK deps → PRIVATE (not in public headers), deduplicate
  holoscan::core, drop cargo-culted DPDK_EXTRA_LIBS
- GPUNetIO manager: CUDA::cuda_driver and DOCA libs → PUBLIC (exposed in
  headers), add enable_language(CUDA) since it has .cu files
- Rivermax manager: remove unnecessary enable_language(CUDA) (no .cu files)
- Parent loop: LANGUAGES CXX CUDA → LANGUAGES CXX (only gpunetio needs
  CUDA, now enables it itself)

Signed-off-by: Alexis Girault <agirault@nvidia.com>

--- a/operators/advanced_network/advanced_network/CMakeLists.txt
+++ b/operators/advanced_network/advanced_network/CMakeLists.txt
@@ -99,7 +99,7 @@ foreach(MGR IN LISTS ANO_MGR_LIST)
     string(TOLOWER ${MGR} MGR_LOWER)
 
     message(STATUS "Adding manager ${MGR_UPPER} to the configuration")
-    project(advanced_network_${MGR_LOWER} LANGUAGES CXX CUDA)
+    project(advanced_network_${MGR_LOWER} LANGUAGES CXX)
     add_library(${PROJECT_NAME} SHARED)
     add_subdirectory(managers/${MGR_LOWER})
     target_compile_definitions(${PROJECT_NAME} PUBLIC "ANO_MGR_${MGR_UPPER}=1")
