feat(holocat): Add EtherCAT application (#1387)
Add HoloCat application that integrates EtherCAT real-time communication
with in a Holoscan app.

Key Features:

Real-time EtherCAT master implementation using EC-Master SDK
Holoscan operator architecture with periodic scheduling
Data flow integration between EtherCAT and Holoscan operators
Configurable cycle times and real-time priorities
Docker containerization with proper capabilities (in-progress)
Components:

HolocatOp: Main EtherCAT operator with state machine management
HcDataTxOp: Data transmission operator for counter generation
HcDataRxOp: Data reception operator for processing received data
This enables real-time industrial automation applications using EtherCAT
fieldbus communication within the Holoscan ecosystem.

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **New Features**
* Added HoloCat application with CLI runner, application wiring,
EtherCAT master operator, and TX/RX operators.

* **Configuration**
* Added runtime YAML defaults, comprehensive ENI EtherCAT XML,
installable binary with optional capabilities, and build/install
integration.

* **Documentation & Tools**
* Added README, application metadata, EC‑Master SDK finder, verification
script, and helper scripts.

* **Tests**
* Added unit, mocked integration, and hardware integration tests, test
helpers, and an EC‑Master mock.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: H. Hawkeye King <hking@nvidia.com>
Signed-off-by: Bruce Hashemian <3968947+bhashemian@users.noreply.github.com>
Co-authored-by: Bruce Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -72,6 +72,8 @@ add_holohub_application(isaac_sim_holoscan_bridge)
 add_holohub_application(high_speed_endoscopy DEPENDS
                         OPERATORS emergent_source)
 
+add_holohub_application(holocat)
+
 add_subdirectory(holoscan_ros2)
 
 add_subdirectory(holoviz)
