feat: Add GstSrcOp and GstSrcResource for pushing Holoscan data to GStreamer (#1342)
# Add GstSrcOp and GstSrcResource for pushing Holoscan data to GStreamer

## 🎯 Overview

This PR introduces new operators and resources for bridging Holoscan
tensor data into GStreamer pipelines, enabling output to GStreamer's
extensive ecosystem of encoders, streamers, and processing elements
(1000+ plugins).

This enables Holoscan applications to push video data into GStreamer for
encoding, streaming, and processing.

## 🔑 Motivation

This PR extends Holoscan's GStreamer integration by adding new operators
and resources to **push** Holoscan video data into GStreamer pipelines,
enabling:

- **Video encoding**: H.264, H.265, VP8, VP9, AV1, etc.
- **Live streaming**: RTP, RTSP, WebRTC, HLS
- **Video effects**: Filters, color correction, transformations
- **Multi-output**: Tee data to multiple destinations
- **Custom processing**: Use any of GStreamer's 1000+ plugins

## 📦 Core Components

### 1. **GstSrcResource**
(`operators/gstreamer/gst_src_resource.{hpp,cpp}`)
Holoscan resource that wraps `GstSrcBridge` for pipeline integration.

**Key Features:**
- Configurable parameters: `caps`, `max_buffers`, `block`
- Zero-copy tensor-to-buffer conversion via
`create_buffer_from_tensor_map()`
- Pipeline control: `push_buffer()`, `send_eos()`
- Async element access via promise/future pattern

**API:**
```cpp
auto gst_src = make_resource<GstSrcResource>("holoscan_src", 
    Arg("caps", "video/x-raw(memory:CUDAMemory),format=RGBA,width=1920,height=1080"),
    Arg("max_buffers", 10));
```

### 2. **GstSrcOp** (`operators/gstreamer/gst_src_op.{hpp,cpp}`)
Holoscan operator that receives tensors and pushes them to GStreamer.

**Key Features:**
- Receives `TensorMap` from input port
- Converts to GStreamer buffers
- Automatically sends EOS on operator stop

**API:**
```cpp
auto gst_src_op = make_operator<GstSrcOp>("gst_src_op",
    Arg("gst_src_resource", holoscan_gst_src));
    
add_flow(source_op,

--- a/operators/gstreamer/CMakeLists.txt
+++ b/operators/gstreamer/CMakeLists.txt
@@ -32,14 +32,20 @@ pkg_check_modules(GSTREAMER_APP REQUIRED gstreamer-app-1.0)
 
 # Create the Holoscan GStreamer Bridge library
 add_library(holoscan_gstreamer_bridge SHARED
-  gst/app_src.cpp
   gst/buffer.cpp
   gst/caps.cpp
   gst/memory.cpp
   gst/message.cpp
+  gst/sample.cpp
   gst/video_info.cpp
+  gst_sink_bridge.cpp
+  gst_sink_op.cpp
+  gst_sink_resource.cpp
   gst_src_bridge.cpp
+  gst_src_op.cpp
+  gst_src_resource.cpp
   gst_video_recorder_op.cpp
+  gst_pipeline_bus_monitor.cpp
 )
 
 # Create alias for consistent naming
@@ -116,6 +122,7 @@ install(TARGETS holoscan_gstreamer_bridge DESTINATION lib)
 # Install headers
 install(FILES
   gst/allocator.hpp
+  gst/app_sink.hpp
   gst/app_src.hpp
   gst/buffer.hpp
   gst/bus.hpp
@@ -130,9 +137,17 @@ install(FILES
   gst/object.hpp
   gst/pad.hpp
   gst/pipeline.hpp
+  gst/sample.hpp
   gst/video_info.hpp
+  gst_sink_bridge.hpp
+  gst_sink_resource.hpp
+  gst_sink_op.hpp
   gst_src_bridge.hpp
+  gst_src_op.hpp
+  gst_src_resource.hpp
   gst_video_recorder_op.hpp
+  gst_pipeline_bus_monitor.hpp
+  gst_wait_group.hpp
   DESTINATION include/holoscan/operators/gstreamer)
 
 # Export the library for use by other CMake projects
