--- a/applications/gstreamer/CMakeLists.txt
+++ b/applications/gstreamer/CMakeLists.txt
@@ -14,4 +14,6 @@
 # limitations under the License.
 
 add_holohub_application(gst_video_recorder DEPENDS OPERATORS gstreamer)
+add_holohub_application(gst_to_holo DEPENDS OPERATORS gstreamer)
+add_holohub_application(holo_to_gst DEPENDS OPERATORS gstreamer)
 
