Tutorial: Fix package conflict in Holoscan SDK VSCode tutorial
Manually install the "base-files" APT package with default conf file
handling to address the devcontainer build failure:
```
Preparing to unpack .../base-files_13ubuntu10.4_amd64.deb ..
Configuration file '/etc/issue.net'
  ==> Modified (by you or by a script) since installation.
  ==> Package distributor has shipped an updated version.
E: Sub-process /usr/bin/dpkg returned an error code (1)
```

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/tutorials/debugging/holoscan_container_vscode/.devcontainer/devcontainer.json
+++ b/tutorials/debugging/holoscan_container_vscode/.devcontainer/devcontainer.json
@@ -22,6 +22,7 @@
         "ghcr.io/devcontainers/features/common-utils:2": {
             "installZsh": true,
             "configureZshAsDefaultShell": true,
+            "upgradePackages": false,
             "userUid": 1000,
             "userGid": 1000
         },
