Tutorial: Fix and update Holoscan SDK VS Code debugging tutorial (#1403)
Manually install the "base-files" APT package with default conf file
handling to address the devcontainer build failure:
```
Preparing to unpack .../base-files_13ubuntu10.4_amd64.deb ..
Configuration file '/etc/issue.net'
  ==> Modified (by you or by a script) since installation.
  ==> Package distributor has shipped an updated version.
E: Sub-process /usr/bin/dpkg returned an error code (1)
```

Also updates to latest Holoscan SDK developer container tag (3.11)

Verified on x86_64:
- "Open Folder in Dev Container" -> container builds fully and IDE opens
in dev container
- Debug preset "Hello World (python)" runs and outputs to console

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->

## Summary by CodeRabbit

* **Chores**
  * Updated Holoscan SDK base image version in development container
* Modified development container configuration to disable automatic
package upgrading during container initialization
* Enhanced non-interactive package update handling for improved setup
experience

<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/tutorials/debugging/holoscan_container_vscode/.devcontainer/Dockerfile
+++ b/tutorials/debugging/holoscan_container_vscode/.devcontainer/Dockerfile
@@ -15,8 +15,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-ARG HOLOSCAN_SDK_IMAGE=nvcr.io/nvidia/clara-holoscan/holoscan:v2.2.0-dgpu
+ARG HOLOSCAN_SDK_IMAGE=nvcr.io/nvidia/clara-holoscan/holoscan:v3.11.0-dgpu
 FROM ${HOLOSCAN_SDK_IMAGE}
+
+# Resolve the one package that prompts on conffile (/etc/issue.net) so dev container
+# features (e.g. common-utils) never hit the prompt. Only upgrade that package.
+# - --force-confdef: use default for modified conffiles (no prompt)
+# - --force-confold: keep current conffile when unchanged
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update \
+    && apt-get install -y --only-upgrade -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" base-files \
+    && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/*
 
 ARG WORKSPACE_DIR=/workspace
 
