Add ST2110 source operator for SMPTE ST 2110-20 video ingestion
Adds a new operator and demo application for receiving SMPTE ST 2110-20
uncompressed video streams over IP networks.

The st2110_source operator receives broadcast-standard uncompressed video
via multicast UDP, targeting professional media and medical imaging
workflows. Features include:

- Multicast UDP reception via Linux sockets (recvmmsg() batch processing)
- Triple-buffer architecture with CUDA pinned memory
- RTP header parsing for frame boundary detection
- Multiple outputs: raw YCbCr-4:2:2-10bit, RGBA 8-bit, NV12 8-bit
- CUDA kernels for 10-bit color conversion (BT.709)
- Python bindings via pybind11

Uses standard Linux sockets rather than DPDK for portability across
the Jetson family, where unified memory architecture reduces the
benefit of GPUDirect.

Platform support: x86_64, aarch64 (tested on NVIDIA Thor AGX with MGBE)

Signed-off-by: Oliver Cleveley-Jones <ollie.cj@gmail.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -134,6 +134,9 @@ add_holohub_application(psd_pipeline DEPENDS
                                   vita49_psd_packetizer
                                   data_writer)
 
+add_holohub_application(st2110_demo DEPENDS
+                        OPERATORS st2110_source)
+
 add_holohub_application(ultrasound_segmentation DEPENDS
                         OPERATORS OPTIONAL aja_source)
 
