Changes to fix build on Jetson, find shared libraries, and improve README.
- Added `ECMASTER_LD_LIBRARY_DIR` path finding to `FindEcMaster.cmake` for improved library discovery.
- Modified `CMakeLists.txt` to set RPATH properties for the `holocat` target using the new library directory.
- Fixed architecture detection to set `ECMASTER_ARCH` to "aarch64" instead of arm64
- Adjusted `verify_ecmaster.sh` to correctly identify the architecture as "aarch64".
- Changed test integration error handling to use `GTEST_FAIL()` instead of `GTEST_SKIP()` for unmet prerequisites.
- Updates to README

Signed-off-by: H. Hawkeye King <hking@nvidia.com>

--- a/applications/holocat/cpp/CMakeLists.txt
+++ b/applications/holocat/cpp/CMakeLists.txt
@@ -76,6 +76,8 @@ target_link_libraries(holocat
 
 # Set RPATH for runtime library discovery and output directory
 set_target_properties(holocat PROPERTIES
+    BUILD_RPATH "${ECMASTER_LD_LIBRARY_DIR}"
+    INSTALL_RPATH "${ECMASTER_LD_LIBRARY_DIR}"
     INSTALL_RPATH_USE_LINK_PATH TRUE
     BUILD_WITH_INSTALL_RPATH FALSE
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/.."
