Fix ST2110 source: initialize POD members, remove raw_frame_size overwrite, guard conversion kernels
   - Add in-class initializers to all POD members to prevent UB if object
     is destroyed before initialize() completes
   - Remove critical bug: raw_frame_size_ overwrite in initialize() that
     clobbered the correct value already set by configure_stream_format()
   - Guard RGBA/NV12 conversion kernels to only run on YCbCr-4:2:2-10bit
     input, logging an error for incompatible formats
   - Replace 6 static local variables with instance members for
     multi-instance safety
   - Use integer pgroup arithmetic for byte offset calculation instead of
     floating-point to avoid truncation
   - Fix #if __cplusplus -> #ifdef __cplusplus in kernels header
   - Fix BUILD.md cmake prefix path and add arch-detecting cmake install
   - Minor: descriptive import comment, markdown code fence, yaml comment

--- a/applications/st2110_demo/st2110_demo_config.yaml
+++ b/applications/st2110_demo/st2110_demo_config.yaml
@@ -15,7 +15,7 @@
 
 # ST2110 Demo Configuration
 # ==========================
-# RGBA output only for testing
+# Both RGBA and NV12 outputs enabled (default mode)
 
 st2110_source:
   # Network parameters - UPDATE THESE FOR YOUR SETUP
