HoloCat: Fix build and runtime on Jetson/aarch64 and improve docs (#1415)
This PR fixes building and running the HoloCat application on Jetson
(aarch64) and improves EC-Master library discovery and documentation.

**Changes**

- FindEcMaster.cmake
  - Use EC-Master’s aarch64 directory name instead of arm64.
  - Add ECMASTER_LD_LIBRARY_DIR to locate shared libraries at runtime
-cpp/CMakeLists.txt
- Set BUILD_RPATH and INSTALL_RPATH to ECMASTER_LD_LIBRARY_DIR to find
EC-Master shared libs at runtime without LD_LIBRARY_PATH.
- scripts/verify_ecmaster.sh
  - Use `aarch64` (instead of `arm64`)
  - Documentation (README.md)
- Clarify Quick Start prerequisites, build path, adapter config, and how
to run tests.
  - Add troubleshooting for shared object libs

Minor wording and formatting fixes.

Tests
- test_integration_hardware.cpp
- Use GTEST_FAIL() instead of GTEST_SKIP() when hardware prerequisites
are not met, so missing setup fails the test instead of being skipped.


<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **Documentation**
* Expanded README with clearer prerequisites, verification, build/run
steps, raw-network enablement, adapter-name guidance, adjusted default
cycle time, and added troubleshooting for library load errors and
environment variables.

* **Tests**
* Integration test now fails (not skips) when prerequisites or hardware
are unavailable; added run guidance.

* **Build & Configuration**
* Enhanced runtime library discovery and conditional runtime path
propagation (RPATH) when a library directory is found; warns if not.

* **Bug Fixes**
* Normalized 64-bit architecture naming to aarch64 for correct library
lookup.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: H. Hawkeye King <hking@nvidia.com>
Signed-off-by: Hawkeye King <hawkeyeking@users.noreply.github.com>
Signed-off-by: Bruce Hashemian <3968947+bhashemian@users.noreply.github.com>
Co-authore

--- a/applications/holocat/cpp/CMakeLists.txt
+++ b/applications/holocat/cpp/CMakeLists.txt
@@ -75,11 +75,22 @@ target_link_libraries(holocat
 )
 
 # Set RPATH for runtime library discovery and output directory
-set_target_properties(holocat PROPERTIES
-    INSTALL_RPATH_USE_LINK_PATH TRUE
-    BUILD_WITH_INSTALL_RPATH FALSE
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/.."
-)
+if(ECMASTER_LD_LIBRARY_DIR)
+    set_target_properties(holocat PROPERTIES
+        BUILD_RPATH "${ECMASTER_LD_LIBRARY_DIR}"
+        INSTALL_RPATH "${ECMASTER_LD_LIBRARY_DIR}"
+        INSTALL_RPATH_USE_LINK_PATH TRUE
+        BUILD_WITH_INSTALL_RPATH FALSE
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/.."
+    )
+else()
+   message(WARNING "ECMASTER_LD_LIBRARY_DIR not found; BUILD_RPATH/INSTALL_RPATH for EC-Master link-layer libs will not be set. Set LD_LIBRARY_PATH at runtime.")
+    set_target_properties(holocat PROPERTIES
+        INSTALL_RPATH_USE_LINK_PATH TRUE
+        BUILD_WITH_INSTALL_RPATH FALSE
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/.."
+    )
+endif()
 
 # Optionally set capabilities for real-time operation
 # Set HOLOCAT_SET_CAPABILITIES=ON to enable this during build
